<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AddBusinessCardActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:background="@drawable/background"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/label_description_new_card"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="64dp"
                android:autofillHints="username"
                android:background="@drawable/background_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/label_name"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#1A237E"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:autofillHints="no"
                android:background="@drawable/background_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/label_phone"
                android:inputType="phone"
                android:textColor="#212121"
                android:textColorHint="#1A237E"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editName" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/background_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress"
                android:textColor="#212121"
                android:textColorHint="#1A237E"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editPhone" />

            <EditText
                android:id="@+id/editCompany"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:autofillHints="no"
                android:background="@drawable/background_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/label_company"
                android:inputType="textPersonName"
                android:textColor="#212121"
                android:textColorHint="#1A237E"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editEmail" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnColor1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/background_btn_color1"
                android:contentDescription="@string/label_color_button"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnColor2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editCompany"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnColor2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/background_btn_color2"
                android:contentDescription="@string/label_color_button"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnColor3"
                app:layout_constraintStart_toEndOf="@id/btnColor1"
                app:layout_constraintTop_toBottomOf="@+id/editCompany"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnColor3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/background_btn_color3"
                android:contentDescription="@string/label_color_button"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnColor4"
                app:layout_constraintStart_toEndOf="@id/btnColor2"
                app:layout_constraintTop_toBottomOf="@+id/editCompany"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnColor4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/background_btn_color4"
                android:contentDescription="@string/label_color_button"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnColor5"
                app:layout_constraintStart_toEndOf="@id/btnColor3"
                app:layout_constraintTop_toBottomOf="@+id/editCompany"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnColor5"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/background_btn_color5"
                android:contentDescription="@string/label_color_button"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnColor4"
                app:layout_constraintTop_toBottomOf="@+id/editCompany"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/background_button"
            android:text="@string/label_save"
            android:textColor="#ffffff" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/background_button"
            android:text="@string/label_exit"
            android:textColor="#ffffff" />
    </LinearLayout>
</LinearLayout>